# mentoro

./: .dockerignore  .env.example  .env.minio  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.base.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  init.sql  justfile  pyproject.toml
.just/: docker.just  lint.just  test.just
deploy/: .env.example
deploy/grafana/provisioning/dashboards/: dashboards.yml  metrics_mentor.json
deploy/grafana/provisioning/datasources/: postgres-datasource.yml
deploy/nginx/: nginx.ssl.conf
docs/: .$pipeline.svg.dtmp  arch.md  cicd.md  coverage.md  creds.md  db.md  general.md  swagger.md
grafana/: grafana.ini
grafana/provisioning/dashboards/: metrics.json  metrics_student.json
grafana/provisioning/datasources/: infinity-datasource.yml  postgres-datasource.yml
nginx/: nginx.conf  nginx.ssl.conf
src/crudik/adapters/: config.py  file_manager.py  idp.py  redis.py  test_api_gateway.py  token_encoder.py  yandex_gpt.py
src/crudik/adapters/db/: access_token.py  mentor.py  mentoring_request.py  (+3 more)
src/crudik/application/: commitable.py  example.py  uow.py
src/crudik/bootstrap/: cli.py
src/crudik/models/: __init__.py  access_token.py  mentor.py  mentoring_request.py  selected_mentor.py  student.py  swiped_mentor.py
src/filler/: cli.py  fill_data.py  test_gateway.py  tokens.csv  tokens.txt
tests/e2e/: conftest.py  gateway.py  test_auth.py  test_stub.py
tests/e2e/mentor/: conftest.py  test_read.py  test_request.py  test_sign_in.py  test_sign_up.py  test_update.py
tests/e2e/review/: test_add.py  test_delete.py
tests/e2e/student/: conftest.py  test_auth.py  test_delete_favorite.py  test_find.py  test_read.py  test_read_favorite.py  test_request.py  test_swipe_mentor.py  test_update.py
(+130 files in other folders)
